--- a/OpenWMS-common/trunk/OpenWMS-common/.settings/org.eclipse.jpt.core.prefs
+++ b/OpenWMS-common/trunk/OpenWMS-common/.settings/org.eclipse.jpt.core.prefs
@@ -1,4 +1,4 @@
-#Sat Jan 17 14:12:42 CET 2009
+#Sun May 24 15:43:35 CEST 2009
 eclipse.preferences.version=1
 org.eclipse.jpt.core.discoverAnnotatedClasses=true
 org.eclipse.jpt.core.platform=generic
