--- a/OpenWMS-tms/trunk/OpenWMS-tms/.project
+++ b/OpenWMS-tms/trunk/OpenWMS-tms/.project
@@ -3,6 +3,7 @@
 	<name>OpenWMS-tms</name>
 	<comment></comment>
 	<projects>
+		<project>OpenWMS-common</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -17,11 +18,6 @@
 		</buildCommand>
 		<buildCommand>
 			<name>org.eclipse.wst.validation.validationbuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.granite.builder.granitebuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
