--- a/OpenWMS-common/trunk/OpenWMS-common-Spring/.classpath
+++ b/OpenWMS-common/trunk/OpenWMS-common-Spring/.classpath
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry combineaccessrules="false" kind="src" path="/OpenWMS-Services"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/OpenWMS-tms"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/OpenWMS-common"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="spring"/>
@@ -29,8 +32,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="deps/build/commons-lang-2.4.jar">
-	</classpathentry>
+	<classpathentry kind="lib" path="deps/build/commons-lang-2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="deps/build/com.springsource.org.apache.commons.collections-3.2.0.jar" sourcepath="deps/build/com.springsource.org.apache.commons.collections-sources-3.2.0.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
@@ -155,8 +157,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenWMS-common"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenWMS-Services"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
