--- a/OpenWMS-common/trunk/OpenWMS-common-Spring/.project
+++ b/OpenWMS-common/trunk/OpenWMS-common-Spring/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>OpenWMS-common</project>
+		<project>OpenWMS-tms</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
