--- a/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/.classpath
+++ b/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/.classpath
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenWMS-common"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenWMS-tms"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenWMS-Services"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenWMS-common-Spring"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="spring"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenWMS-Services"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/OpenWMS-common"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
