--- a/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/build.properties
+++ b/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/build.properties
@@ -7,8 +7,13 @@
 project.dir=.
 project.version=1.0.0
 
-openwms_common.dist.dir=${env.OPENWMS_COMMON}/dist
-openwms_services.dist.dir=${env.OPENWMS_SERVICESAPI}/dist
+FLEX_HOME=${env.FLEX_HOME}
+FLEX_TASKS_JAR=${env.FLEX_HOME}/ant/lib/flexTasks.jar
+
+openwms_common.jar=../OpenWMS-common/dist/OpenWMS-common.jar
+openwms_tms.jar=../OpenWMS-tms/dist/OpenWMS-tms.jar
+openwms_services.jar=../OpenWMS-Services/dist/OpenWMS-Services.jar
+openwms_service-impl.jar=../OpenWMS-common-Spring/dist/OpenWMS-common-Spring.jar
 
 ant.dir=${build.dir}/ant
 
@@ -36,7 +41,7 @@ flex.src.dir=client/flex/as3
 ivy.dep.file=${etc.dir}/ivy.xml
 ivy.settings.file=${etc.dir}/ivysettings.xml
 
-jar.file=${ant.project.name}.jar
+war.file=${ant.project.name}.war
 osgi-jar.file=${ant.project.name}-osgi.jar
 
 junit.reports.dir=${reports.dir}/unittest
