Created new service
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@303 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/OpenWMS-common-Spring/build.xml
+++ b/OpenWMS-common/trunk/OpenWMS-common-Spring/build.xml
@@ -20,6 +20,9 @@
 	<property name="bundle.manifestVersion" value="2"/>
 
     <path id="class.path">
+        <fileset dir="${openwms_tms.dist.dir}">
+            <include name="**/*.jar" />
+        </fileset>
         <fileset dir="${openwms_common.dist.dir}">
             <include name="**/*.jar" />
         </fileset>
@@ -35,6 +38,9 @@
     </path>
 
     <path id="project.deps.path">
+        <fileset dir="${openwms_tms.dist.dir}">
+            <include name="**/*.jar" />
+        </fileset>
         <fileset dir="${openwms_common.dist.dir}">
             <include name="**/*.jar" />
         </fileset>
