Adopted to maven structure, corrected build file
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@323 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/OpenWMS-common/build.properties
+++ b/OpenWMS-common/trunk/OpenWMS-common/build.properties
@@ -44,15 +44,15 @@ junit.reports.dir=${reports.dir}/unittest
 junit.reports.html.dir=${junit.reports.dir}/html
 junit.reports.xml.dir=${junit.reports.dir}/xml
 
+lib.dir=${project.dir}/lib
+
 reports.dir=${docs.dir}/reports
-
-src.dir=${project.dir}/src
-src.meta-inf.dir=${src.dir}/META-INF
-
-testsrc.dir=${project.dir}/test
 
 spring.dir=${workspace.dir}/spring
 
-lib.dir=${project.dir}/lib
+src.dir=${project.dir}/src/main/java
+res.dir=${project.dir}/src/main/resources
 
+testsrc.dir=${project.dir}/src/test/java
+testres.dir=${project.dir}/src/test/resources
 
