Added ActionScript generator libraries
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@324 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/OpenWMS-common/build.xml
+++ b/OpenWMS-common/trunk/OpenWMS-common/build.xml
@@ -30,6 +30,12 @@
         <fileset dir="${lib.dir}/granite">
             <include name="**/*.jar" />
         </fileset>
+        <fileset dir="${deps.dir}/build">
+            <include name="**/*.jar" />
+        </fileset>
+        <fileset dir="${deps.dir}/test">
+            <include name="*.jar" />
+        </fileset>
     </path>
 
     <!-- All non java files in the src directory -->
