--- a/OpenWMS-common/trunk/OpenWMS-common-Spring/build.properties
+++ b/OpenWMS-common/trunk/OpenWMS-common-Spring/build.properties
@@ -9,7 +9,7 @@ project.version=1.0.0
 
 openwms_common.dist.dir=${env.OPENWMS_COMMON}/dist
 openwms_services.dist.dir=${env.OPENWMS_SERVICESAPI}/dist
-openwms_tms.dist.dir=../OpenWMS-tms/dist
+openwms_tms.dist.dir=../../../OpenWMS-tms/trunk/OpenWMS-tms/dist
 
 ant.dir=${build.dir}/ant
 #ant.log.dir=${ant.dir}/log
