--- a/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/WebContent/WEB-INF/web.xml
+++ b/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/WebContent/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
-	<display-name>OpenWMS-Flex-GraniteDS</display-name>  
+	<display-name>OpenWMS</display-name>  
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
