--- a/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/.project
+++ b/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/.project
@@ -15,11 +15,6 @@
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>org.eclipse.wst.jsdt.core.javascriptValidator</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
 			</arguments>
@@ -40,12 +35,13 @@
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>org.granite.builder.granitebuilder</name>
+			<name>net.sf.amateras.air.MXMLBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>net.sf.amateras.air.AIRFlexProjectNature</nature>
 		<nature>org.springframework.ide.eclipse.core.springnature</nature>
 		<nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
 		<nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
@@ -56,4 +52,11 @@
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 		<nature>org.granite.builder.granitenature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>[source path] as3</name>
+			<type>2</type>
+			<location>/projects/OpenWMS2005/OpenWMS-common/trunk/OpenWMS-common/client/flex/as3</location>
+		</link>
+	</linkedResources>
 </projectDescription>
