--- a/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/WebContent/WEB-INF/web.xml
+++ b/OpenWMS-common/trunk/OpenWMS-Flex-GraniteDS/WebContent/WEB-INF/web.xml
@@ -50,6 +50,15 @@
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
 
+	<filter>
+		<filter-name>jpaFilter</filter-name>
+		<filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>jpaFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
     <filter>
         <filter-name>AMFMessageFilter</filter-name>
         <filter-class>org.granite.messaging.webapp.AMFMessageFilter</filter-class>
@@ -67,6 +76,16 @@
     <servlet-mapping>
         <servlet-name>AMFMessageServlet</servlet-name>
         <url-pattern>/graniteamf/*</url-pattern>
+    </servlet-mapping>
+ 
+    <servlet>
+        <servlet-name>UploadServlet</servlet-name>
+        <servlet-class>org.openwms.web.servlet.UploadServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UploadServlet</servlet-name>
+        <url-pattern>/upload/*</url-pattern>
     </servlet-mapping>
 	
 	<welcome-file-list>
