--- a/OpenWMS-tms/trunk/OpenWMS-tms/build.properties
+++ b/OpenWMS-tms/trunk/OpenWMS-tms/build.properties
@@ -8,8 +8,8 @@ project.dir=.
 project.version=1.0.0
 
 openwms_common.dist.dir=${env.OPENWMS_COMMON}/dist
-openwms_common.src.dir=${env.OPENWMS_COMMON}/src
-openwms_common.test.dir=${env.OPENWMS_COMMON}/test
+openwms_common.src.dir=${env.OPENWMS_COMMON}/src/main/java
+openwms_common.test.dir=${env.OPENWMS_COMMON}/src/test/java
 
 FLEX_HOME=${env.FLEX_HOME}
 FLEX_TASKS_JAR=${env.FLEX_HOME}/ant/lib/flexTasks.jar
