Migrated to maven project nature
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@367 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-tms/trunk/OpenWMS-tms/pom.xml
+++ b/OpenWMS-tms/trunk/OpenWMS-tms/pom.xml
@@ -2,7 +2,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.openwms</groupId>
-    <artifactId>OpenWMS-tms</artifactId>
+    <artifactId>tms-domain</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>TMS Domain classes</name>
@@ -101,6 +101,11 @@
             <artifactId>junit</artifactId>
             <version>4.5</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>common-domain</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
