Migrated to maven project nature
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@379 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/common-service/pom.xml
+++ b/OpenWMS-common/trunk/common-service/pom.xml
@@ -5,4 +5,30 @@
     <artifactId>common-services</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <name>Common Service API</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>common-domain</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>tms-domain</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
