Removed generated code files
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@397 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/common-domain-swc/pom.xml
+++ b/OpenWMS-common/trunk/common-domain-swc/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>common-domain-swc</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>swc</packaging>
-    <name>Common Domain ActionScript DTO</name>
+    <name>Common Domain ActionScript Classes</name>
     <description>Generated ActionScript class files</description>
     <properties>
         <property.org.graniteds-core.version>1.2.0_SP1</property.org.graniteds-core.version>
