Migrated to maven project nature
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@399 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/common-domain/pom.xml
+++ b/OpenWMS-common/trunk/common-domain/pom.xml
@@ -1,9 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.openwms</groupId>
+    <parent>
+        <groupId>org.openwms</groupId>
+        <artifactId>OpenWMS</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
     <artifactId>common-domain</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Common Domain classes</name>
     <properties>
@@ -11,7 +14,7 @@
     </properties>
 
     <build>
-       <plugins>
+        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -23,19 +26,6 @@
 
         </plugins>
     </build>
-
-    <distributionManagement>
-        <repository>
-            <id>Rudi-Releases</id>
-            <name>Internal Releases</name>
-            <url>http://rudi:8081/nexus/content/repositories/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>Rudi-Snapshots</id>
-            <name>Internal Snapshots</name>
-            <url>http://rudi:8081/nexus/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 
     <dependencies>
         <dependency>
