Adopted to Springs naming convention
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@406 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/org.openwms.common.domain/pom.xml
+++ b/OpenWMS-common/trunk/org.openwms.common.domain/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>OpenWMS</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>common-domain</artifactId>
+    <artifactId>org.openwms.common.domain</artifactId>
     <packaging>jar</packaging>
     <name>Common Domain classes</name>
     <properties>
